修改产品列表页

--- a/acerchem/acerchemwebservices/web/webroot/webPhone/css/style-style.css
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/css/style-style.css
@@ -2564,6 +2564,7 @@ select::-ms-expand {
   font-size: 0.22rem;
   color: #444;
   line-height: 0.28rem;
+  height:60px;
 }
 
 .swiper-gall .price span {
