--- a/acerchem/acerchemwebservices/web/webroot/webPhone/css/style-style.css
+++ b/acerchem/acerchemwebservices/web/webroot/webPhone/css/style-style.css
@@ -1219,7 +1219,7 @@ img {
 
 .g-index-let .item {
   padding: 0.32rem;
-  height: 100%;
+  height: 50%;
 }
 
 .maxnav {
@@ -1855,6 +1855,8 @@ img {
 }
 
 .g-every li {
+  width: 3rem;
+  height: 3rem;
   float: left;
   text-align: center;
   padding-left: 0.24rem;
